objects/Case.object
<CustomObject>
    <businessProcesses>
        <fullName>Default</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed %2F Resolved</fullName>
        </values>
        <values>
            <fullName>Escalated</fullName>
        </values>
        <values>
            <fullName>In Progress</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>On Hold</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>RSC_ServiceConsole</fullName>
        <description>Support Process for Service Console</description>
        <isActive>true</isActive>
        <values>
            <fullName>Closed %2F Resolved</fullName>
        </values>
        <values>
            <fullName>In Progress</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Resolved</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>SD_HealthFeedback</fullName>
        <description>Liberty Health support process for compliments and queries that are generated from their contact us form</description>
        <isActive>true</isActive>
        <values>
            <fullName>Closed %2F Resolved</fullName>
        </values>
        <values>
            <fullName>Escalated</fullName>
        </values>
        <values>
            <fullName>In Progress</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>On Hold</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>SD_HealthSupport</fullName>
        <description>Support Process for Liberty Health</description>
        <isActive>true</isActive>
        <values>
            <fullName>Closed %2F Resolved</fullName>
        </values>
        <values>
            <fullName>Escalated</fullName>
        </values>
        <values>
            <fullName>In Progress</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>On Hold</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>STANLIB Support</fullName>
        <description>STANLIB Support Process for Institutional and Retail</description>
        <isActive>true</isActive>
        <values>
            <fullName>Awaiting Further Information</fullName>
        </values>
        <values>
            <fullName>Closed %2F Resolved</fullName>
        </values>
        <values>
            <fullName>Escalated</fullName>
        </values>
        <values>
            <fullName>In Progress</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Triage</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>STANLIB Support Process</fullName>
        <description>Used to guide Service Consultants to resolve cases for STANLIB clients</description>
        <isActive>true</isActive>
        <values>
            <fullName>Awaiting Further Information</fullName>
        </values>
        <values>
            <fullName>Closed %2F Resolved</fullName>
        </values>
        <values>
            <fullName>Duplicate</fullName>
        </values>
        <values>
            <fullName>Escalated</fullName>
        </values>
        <values>
            <fullName>In Progress</fullName>
        </values>
        <values>
            <fullName>Internal Review</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Spam</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>AW_AnticipatedCloseDate__c</fullName>
        <description>This is the date that the advisor thinks the case will be resolved by.</description>
        <label>Anticipated Close Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>AW_Feedback__c</fullName>
        <description>This field is the feedback as to why the case was resolved.</description>
        <label>Feedback</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>AW_MasterAccount__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Used to store the Master Account Details</description>
        <label>MasterAccount</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Cases (MasterAccount)</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AW_ParentAccountOwnerId__c</fullName>
        <description>Used to store the Parent Account Owner Id</description>
        <formula>IF(NOT(ISNULL(Account.Id)),Account.OwnerId,null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AW_ParentAccountOwnerId</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ECM_PolicyNumber__c</fullName>
        <label>Policy Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FinServ__FinancialAccount__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Financial Account</label>
        <referenceTo>FinServ__FinancialAccount__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FinServ__Household__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Household</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Household Cases</relationshipLabel>
        <relationshipName>HouseholdCases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RSC_AQC__c</fullName>
        <description>This field is created for Q-assign user story</description>
        <label>AQC</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RSC_AccountEmail__c</fullName>
        <description>Contains the email address of the account holder on a case</description>
        <formula>IF(Account.IsPersonAccount, Account.PersonContact.Email , Account.AW_Email__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RSC_AccountID__c</fullName>
        <description>Contains the identification no for person account and company trust for business account  linked to case</description>
        <formula>IF(Account.IsPersonAccount ,Account.AW_IdentificationNumber__pc,Account.AW_CompanyRegistrationTrustNumber__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RSC_AccountMobile__c</fullName>
        <description>Account holders mobile number</description>
        <formula>IF(Account.IsPersonAccount ,Account.PersonMobilePhone, Account.AW_Mobile__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Holder Mobile</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RSC_AccountPhone__c</fullName>
        <description>Account holders phone number</description>
        <formula>IF(Account.IsPersonAccount , Account.PersonContact.Phone , Account.Phone)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Holder Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RSC_AdviserFirstName__c</fullName>
        <description>Used to store the First Name of the Adviser associated to the Case</description>
        <formula>SC_ConsultantCode__r.RSC_AdviserFirstName__c</formula>
        <label>Adviser First Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RSC_AdviserLastName__c</fullName>
        <description>Used to store the Last Name of the Adviser associated to the Case</description>
        <formula>SC_ConsultantCode__r.RSC_AdviserLastName__c</formula>
        <label>Adviser Last Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RSC_CaseReassignmentReason__c</fullName>
        <description>Contains a reason captured by the service agent for re-assigning a case.</description>
        <label>Case Reassignment Reason</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RSC_Department__c</fullName>
        <description>Contains the department value based on the Service Type.</description>
        <label>Department</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RSC_Email__c</fullName>
        <formula>SC_ConsultantCode__r.RSC_AdviserEmail__c</formula>
        <label>Adviser Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RSC_ExternalDepartment__c</fullName>
        <description>Field used to indicate the External Department the Case was referred to on the On Hold Flow screen.</description>
        <label>External Department</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>SC_Reason__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Risk</fullName>
                </value>
                <value>
                    <fullName>Legal</fullName>
                </value>
                <value>
                    <fullName>Compliance</fullName>
                </value>
                <value>
                    <fullName>Forensics</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RSC_FinancialAdviser__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Refers to the adviser on the contract for the case in service</description>
        <label>Financial Adviser</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RSC_IsAssigned__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Field used in assignment group actions that will flag true once a case has been assigned.  This flag will be used to trigger the milestone to start</description>
        <label>Is Assigned</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RSC_IsRelated__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used to identify a relationship with parent case while cloning a case</description>
        <label>Is Related?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RSC_Rank__c</fullName>
        <description>Ranking per client. Rank as 1 being most likely to lapse their policy with Liberty.  Field for Q-Assign usage.</description>
        <formula>SC_CaseExtension__r.RSC_Rank__c</formula>
        <label>Rank</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RSC_ReassignCase__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicator denoting case re-assignment</description>
        <label>Reassign Case?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RSC_ResumeDate__c</fullName>
        <description>Date at which work on the case re-commenced</description>
        <label>Resume Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>RSC_ServiceTypeActionPlanTemplateId__c</fullName>
        <description>Provides the Action Plan Template Id for the Service Type associated to the Case. Assists with optimising the creation of Checklist Items from the Template when a Service Type is associated to a Case</description>
        <formula>RSC_ServiceType__r.RSC_ActionPlanTemplate__c</formula>
        <label>Service Type Action Plan Template Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RSC_ServiceType__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Refers to the type of service requested</description>
        <label>Service Type</label>
        <referenceTo>SC_ServiceType__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RSC_Team__c</fullName>
        <description>This field is created as a part of Q-assign story and will store Team information</description>
        <label>Team</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RSC_WorkflowCaseNumber__c</fullName>
        <description>This field contains the Horizon source system case number</description>
        <externalId>true</externalId>
        <label>Workflow Case Number</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SC_AccountIntermediatedStatus__c</fullName>
        <description>Indicates whether the Client on the Case is Orphaned or Intermediated</description>
        <formula>Account.SC_AccountIntermediatedStatus__c</formula>
        <label>Account Intermediated Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SC_Assignable__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Populated with value from assignable field from Service Type object</description>
        <label>Assignable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SC_AssignedTo__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Contains the name of the qualified servicing agent the case is automatically allocated to.</description>
        <label>Assigned To</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SC_COMMS_ClientName__c</fullName>
        <description>To Populate Client Name from the case extension object.
Use this field in email template to send SMS.</description>
        <formula>SC_CaseExtension__r.RSC_ClientFirstName__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Client Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SC_COMMS_ClientSurname__c</fullName>
        <description>To Populate Client Surname from the case extension object.
Use this field in email template to send SMS.</description>
        <formula>SC_CaseExtension__r.RSC_ClientSurname__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Client Surname</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SC_COMMS_ClientTitle__c</fullName>
        <description>To Populate Client Title from the case extension object.
Use this field in email template to send SMS.</description>
        <formula>SC_CaseExtension__r.RSC_ClientTitle__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Client Title</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SC_COMMS_PolicyNumber__c</fullName>
        <description>To Populate Client Policy Number (Master Contract Number) from the case extension object.
Use this field in email template to send SMS.</description>
        <formula>IF
(
AND
(
LEN(SC_CaseExtension__r.RSC_MasterContractNumber__c) &gt; 4,
ROUND(LEN(SC_CaseExtension__r.RSC_MasterContractNumber__c) * 0.25, 0) &gt; 1,
ROUND(LEN(SC_CaseExtension__r.RSC_MasterContractNumber__c) * 0.25, 0) &lt; (LEN(SC_CaseExtension__r.RSC_MasterContractNumber__c) - 2)
),
LEFT(SC_CaseExtension__r.RSC_MasterContractNumber__c, FLOOR((LEN(SC_CaseExtension__r.RSC_MasterContractNumber__c) - ROUND(LEN(SC_CaseExtension__r.RSC_MasterContractNumber__c) * 0.25, 0)) / 2))
&amp; SUBSTITUTE(TEXT(10^ROUND(LEN(SC_CaseExtension__r.RSC_MasterContractNumber__c) * 0.25, 0) - 1), &quot;9&quot;, &quot;#&quot;)
&amp; RIGHT(SC_CaseExtension__r.RSC_MasterContractNumber__c, CEILING((LEN(SC_CaseExtension__r.RSC_MasterContractNumber__c) - ROUND(LEN(SC_CaseExtension__r.RSC_MasterContractNumber__c) * 0.25, 0)) / 2)),
SC_CaseExtension__r.RSC_MasterContractNumber__c
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SC COMMS Policy Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SC_COMMS_ResumeDateAsText__c</fullName>
        <description>This will convert the Resume Date to text for use in Email Templates</description>
        <formula>IF
(
  ISNULL(RSC_ResumeDate__c),
  NULL,
  TEXT
  (
    DAY(DATEVALUE(RSC_ResumeDate__c))
  )
  +
  &quot; &quot;
  +
  CASE
  (
    TEXT(MONTH(DATEVALUE(RSC_ResumeDate__c))),
    &quot;1&quot;, &quot;January&quot;,
    &quot;2&quot;, &quot;February&quot;,
    &quot;3&quot;, &quot;March&quot;,
    &quot;4&quot;, &quot;April&quot;,
    &quot;5&quot;, &quot;May&quot;,
    &quot;6&quot;, &quot;June&quot;,
    &quot;7&quot;, &quot;July&quot;,
    &quot;8&quot;, &quot;August&quot;,
    &quot;9&quot;, &quot;September&quot;,
    &quot;10&quot;, &quot;October&quot;,
    &quot;11&quot;, &quot;November&quot;,
    &quot;December&quot;
  )
  +
  &quot; &quot;
  +
  TEXT
  (
    YEAR(DATEVALUE(RSC_ResumeDate__c))
  )
+
  &quot; &quot;
  +
  LEFT
  (
    TEXT
    (
      TIMEVALUE(RSC_ResumeDate__c) + (2 * 60 * 60 * 1000)
    ),
    5
  )
)</formula>
        <label>Resume Date (as Text)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SC_CaseExtension__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to the Case Extension object.</description>
        <label>Case Extension</label>
        <referenceTo>SC_CaseExtension__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SC_ConsultantCode__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Used to store the Consultant code of the Adviser associated to the Case</description>
        <label>Consultant Code</label>
        <referenceTo>SC_ConsultantCodes__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SC_IsClientVerified__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used to identify whether the client has been authenticated</description>
        <label>Is Client Verified?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SC_OnHoldStatus__c</fullName>
        <description>Field used to indicate why the case was put On Hold</description>
        <label>On Hold Status</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>SC_SubStatus__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Escalated</fullName>
                </value>
                <value>
                    <fullName>Outstanding Requirements</fullName>
                </value>
                <value>
                    <fullName>Other Options</fullName>
                </value>
                <value>
                    <fullName>Reschedule</fullName>
                </value>
                <value>
                    <fullName>Broker to contact client</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SC_Reason__c</fullName>
        <description>Field used to state reason for the selected &quot;On Hold Status&quot;</description>
        <label>Reason</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>SC_OnHoldStatus__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Approval Required</fullName>
                </value>
                <value>
                    <fullName>Assistance Required</fullName>
                </value>
                <value>
                    <fullName>Review Response</fullName>
                </value>
                <value>
                    <fullName>Systematic Override</fullName>
                </value>
                <value>
                    <fullName>System Update</fullName>
                </value>
                <value>
                    <fullName>Overnight Update</fullName>
                </value>
                <value>
                    <fullName>Annuity Transfer Authorized</fullName>
                </value>
                <value>
                    <fullName>Awaiting Decision</fullName>
                </value>
                <value>
                    <fullName>Awaiting Document Print</fullName>
                </value>
                <value>
                    <fullName>Other Departments</fullName>
                </value>
                <value>
                    <fullName>Refer To Department Name</fullName>
                    <label>Referred to Department</label>
                </value>
                <value>
                    <fullName>Document Scanning</fullName>
                </value>
                <value>
                    <fullName>Verification</fullName>
                </value>
                <value>
                    <fullName>Underwriting</fullName>
                </value>
                <value>
                    <fullName>Anniversary</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Outstanding Requirements</fullName>
                </value>
                <value>
                    <fullName>Client Requested Call Back</fullName>
                </value>
                <value>
                    <fullName>Client Not Available</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SC_RequesterEmail__c</fullName>
        <description>Field used to populate the case requester&apos;s email address</description>
        <label>Requester Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>SC_RequesterMobile__c</fullName>
        <description>Field used to populate the case requester&apos;s mobile number</description>
        <label>Requester Mobile</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>SC_RequesterName__c</fullName>
        <description>Field used to populate the case requester&apos;s full name</description>
        <label>Requester Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SC_RequesterPhone__c</fullName>
        <description>Field used to populate the case requester&apos;s phone number</description>
        <label>Requester Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>SC_RequesterType__c</fullName>
        <description>Field used to populate type of  the case requester</description>
        <label>Requester Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Attorney</fullName>
                </value>
                <value>
                    <fullName>Bank</fullName>
                </value>
                <value>
                    <fullName>Beneficiary</fullName>
                </value>
                <value>
                    <fullName>Broker</fullName>
                </value>
                <value>
                    <fullName>Broker Consultant</fullName>
                </value>
                <value>
                    <fullName>Cessionary</fullName>
                </value>
                <value>
                    <fullName>Customer</fullName>
                </value>
                <value>
                    <fullName>Executor</fullName>
                </value>
                <value>
                    <fullName>Internal</fullName>
                </value>
                <value>
                    <fullName>Internal - CVC</fullName>
                </value>
                <value>
                    <fullName>Internal - Claims</fullName>
                </value>
                <value>
                    <fullName>Internal - Collection Services</fullName>
                </value>
                <value>
                    <fullName>Internal - Commissions</fullName>
                </value>
                <value>
                    <fullName>Internal - Customer Relations</fullName>
                </value>
                <value>
                    <fullName>Internal - Data Integrity Services</fullName>
                </value>
                <value>
                    <fullName>Internal - Duplicate</fullName>
                </value>
                <value>
                    <fullName>Internal - Finance</fullName>
                </value>
                <value>
                    <fullName>Internal - Investment Services</fullName>
                </value>
                <value>
                    <fullName>Internal - Payment Services</fullName>
                </value>
                <value>
                    <fullName>Internal - Policy Services</fullName>
                </value>
                <value>
                    <fullName>Internal - RIO</fullName>
                </value>
                <value>
                    <fullName>Internal - Retentions</fullName>
                </value>
                <value>
                    <fullName>Internal - Value Services</fullName>
                </value>
                <value>
                    <fullName>Internal - Walk-in Centre</fullName>
                </value>
                <value>
                    <fullName>Internal - info@keytax</fullName>
                </value>
                <value>
                    <fullName>Life Assured</fullName>
                </value>
                <value>
                    <fullName>Non Contracted broker</fullName>
                </value>
                <value>
                    <fullName>Regulatory Body</fullName>
                </value>
                <value>
                    <fullName>Unauthorised Party</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SC_Requester__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Field used to populate the case requester</description>
        <label>Requester</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Cases (Requestor)</relationshipLabel>
        <relationshipName>Cases1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SC_SourceSystem__c</fullName>
        <description>Indicates which system the service request came from</description>
        <label>Source System</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Salesforce</fullName>
                </value>
                <value>
                    <fullName>Horizon</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SC_SubStatus__c</fullName>
        <description>Field used to indicate the Sub-Status of a case and provides additional information to support Status lifecycle.</description>
        <label>Sub-Status</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Status</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>On Hold</fullName>
                </value>
                <value>
                    <fullName>Re-opened</fullName>
                </value>
                <value>
                    <fullName>Terminated</fullName>
                </value>
                <value>
                    <fullName>Resumed</fullName>
                </value>
                <value>
                    <fullName>Escalated</fullName>
                    <isActive>false</isActive>
                    <label>Escalated</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SD_AgeOfCaseInHours__c</fullName>
        <description>Calculate the age of the Liberty Health cases and displays in hours. Takes business hours into consideration. Day is calculated to start at 08:00 everyday. Day length considered 9 hours.</description>
        <formula>9 * (
   ( 5 * FLOOR( ( DATEVALUE(SD_SlaEndDate__c  ) - SD_FirstDateThatIsAMonday__c ) / 7) +
    MIN(5, 
     MOD( DATEVALUE( SD_SlaEndDate__c  ) - SD_FirstDateThatIsAMonday__c, 7) +
     MIN( 1, 24 / 8 * ( MOD(SD_SlaEndDate__c - SD_StartDateTimeForFirstMonday__c, 1 ) ) )
    ) 
   )
 -
   ( 5 * FLOOR( ( DATEVALUE( SD_SlaStartDate__c ) - SD_FirstDateThatIsAMonday__c) / 7) +
     MIN( 5,
      MOD( DATEVALUE( SD_SlaStartDate__c ) - SD_FirstDateThatIsAMonday__c, 7 ) +
      MIN( 1, 24 / 8 * ( MOD( SD_SlaStartDate__c - SD_StartDateTimeForFirstMonday__c, 1) ) )
    )
   ) 
  )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Age of Case in Hours</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SD_CaseOwnerProfile__c</fullName>
        <description>Used for list views to filter case owners who are supervisors, so that in the event of the supervisor is out-of-office, other supervisors can pick up from where they left off.</description>
        <formula>Owner:User.Profile.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case Owner Profile</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SD_ConsentGiven__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Client gives Liberty consent to collect, process and share information as per privacy terms and conditions</description>
        <inlineHelpText>Client gives Liberty consent to collect, process and share information as per privacy terms and conditions</inlineHelpText>
        <label>Consent Given</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SD_Country__c</fullName>
        <description>SD Health: Indicates which country the customer is from and it is used to identify which queue the case is routed to.</description>
        <label>Country</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Mozambique</fullName>
                </value>
                <value>
                    <fullName>Uganda</fullName>
                </value>
                <value>
                    <fullName>Malawi</fullName>
                </value>
                <value>
                    <fullName>South Africa</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SD_CustomerType__c</fullName>
        <description>SD Health: Indicates if the user who logged the case is an existing or non existing client and it is used to identify which queue the case is routed to.</description>
        <label>Customer Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>Existing</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SD_FeedbackType__c</fullName>
        <description>Field is pre-populated from Liberty Health&apos;s contact-us form</description>
        <label>Feedback Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Query</fullName>
                </value>
                <value>
                    <fullName>Compliment</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SD_FirstDateThatIsAMonday__c</fullName>
        <description>Used when calculating Age of the Case</description>
        <formula>DATE(2018,01,01)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>First Date that is a Monday</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SD_FirstName__c</fullName>
        <description>First Name retrieved from the chat bot.</description>
        <label>First Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SD_LastName__c</fullName>
        <description>Last Name retrieved from the chat bot</description>
        <label>Last Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
</CustomObject>